sandwich menu in scholarships results wip, prevent zoom in in mobile inputs & select, add sorting & new filters on mobile menu search scholarships

--- a/public/new/css/scholarships.css
+++ b/public/new/css/scholarships.css
@@ -291,6 +291,7 @@ p {padding: 15px; color: #5d5d5d;  }
     .circle{margin-left: -10px; width: 50px; height: 50px}
     .trophy-container{ width: 32px;}
     .trophy-img{width: 32px; margin-top: 12px}
+    .logo-img{width: 42px; margin-top: 3px!important; margin-left: -5px!important;}
 }
 
 
@@ -303,6 +304,7 @@ p {padding: 15px; color: #5d5d5d;  }
  .circle{margin-left: -10px; width: 43px; height: 43px}
  .trophy-container{ width: 27px;}
  .trophy-img{width: 27px; margin-top: 10px}
+  .logo-img{width: 36px; margin-top: 2.4px!important; margin-left: -4.51px!important;}
 
 }
 
